@@ -75,8 +75,15 @@ Fixed bugs:
 
 * random component of temporary files is now always a positive integer.
 
-* Fix <ilasm> outputfile tetsing so that the output file does not need
+* Fix <ilasm> outputfile testing so that the output file does not need
   to exist beforehand.
+
+* Ant could incorrectly try to use the 1.4 regexp implementation even
+  if it isn't available if you run the JVM with -Xverify:none.
+
+* Ant would die with an exception if you used nested <reference>
+  elements in Ant and the refid attribute didn't point to an existing
+  project reference.
 
 Other changes:
 --------------
